	  include/nuttx into include/nuttx/net.
	* arch/mips/src/pic32mx/pic32mx_usbdev.c:  The PIC32 USB driver now appears to
	  be fully functional.
	* configs/sure-pic32mx/usbnsh and configs/sure-pic32mx/src:  Add support for
	  NSH using only USB serial I/O to support the console.  This is useful on
	  devices that have USB, but no serial port.
	* arch/mips/src/pic32mx/pic32mx_spi.c:  Add a PIC32 SPI driver.  Initial
	  checkin is primitive, incomplete (lacks interrupt logic), and untested.
	* configs/pic32-startkit/nsh:  Completed verification of the PIC32 Ethernet
	  Starter Kit port.  Added and verified the NuttShell (NSH) on the PIC32
	  Ethernet Starter Kit.  I can now (finally) claim to have complete the
	  basic port to this board.
	* configs/pic32-startkit/nsh/up_usbdev, up_nsh.c, and up_usbterm.c:  Verified
	  the USB (device) driver on the PIC32 Ethernet Starter Kit.
	* arch/mips/src/pic32mx/pic32mx_ethernet.c:  Verified the PIC32 Ethernet
	  driver on the PIC32 Starter Kit.  Status:  It is occasionally functional
	  but not stable enough for use.
	* arch/arm/include/stm32, arch/arm/src/stm32:  Add general support for
	  the STM32 F2 family. Contributed by Gary Teravskis,
	* configs/stm3220g-eval:  Add support for the STMicro STM3220G-EVAL board.
	  Contributed by Gary Teravskis,
 
6.17 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* configs/sure-pic32mx: Add support for the Sure DB-DP11212 PIC32 General
	  Purpose Demo Board
	* arch/arm/src/stm32/stm32_usbhost.c/.h:  Add files that will (eventually)
	  hold an STM32 USB host driver (the initial check-in is the NuttX LPC17
	  USB host driver with name changes only).
	* arch/arm/src/stm32/chip/stm32_otgfs.h:  STM32 USB OTG FS register
	  definitions (not complete on initial check-in).
	* net/connect.c:  Add another low level, thread-independent socket interface
	  for use within the OS.
	* arch/mips/src/pic32mx/pic32mx_ethernet.c:  The PIC32 Ethernet driver
	  is now stable on the PIC32 Starter Kit.